# tiltedprompts

./: .gitignore  AGENT_HANDOFF_TILTEDVOICE.md  AGENT_HANDOFF_WEBSITE.md  CLAUDE_PROMPT_SLACK_FIX.md  DEPLOYMENT_INSTRUCTIONS.md  LAUNCH_CALENDAR_FEB_28.md  PRODUCTION_BACKEND_STRATEGY.md  PROMPT_FOR_ANTIGRAVITY.md  SKILL.md  TESTING_GUIDE.md  TILTED_PROMPTS_WIKI.md  batch_seed.py  skills.txt  supabase_init.sql  supabase_production.sql  supabase_schema.sql  supabase_seed.sql  temp.json  tools.py
.claude/: launch.json  settings.local.json
Wiki and Docs/: OPENCLAW_SLACK_TUTORIAL.md
backend/: .env.example  README_bundle_generator.md  bundle_generator.py  config.py  email_service.py  generate_first_bundles.py  llm_provider.py  sample_response.json  self_test.py  test_e2e.py  webhook_handler.py
docs/: ASSET_GENERATOR_ARCHITECTURE.md  FRAMEWORK_CRON_OPERATIONS.md  SLACK_AGENT_TUTORIAL.md  SLACK_STATUS_REPORTING.md  TILTEDPROMPTS_FOUNDER_DECK.html  TILTEDPROMPTS_MASTER_DECK.html  TILTEDPROMPTS_PRODUCT_SPEC.md  business-plan.md  gumroad_setup_guide.md
marketing/: lead_capture_automation.md  outreach_helper.py
openclaw/: openclaw_setup.md
scripts/: migrate_bundles.py  sync_to_slack.py
tiltedprompts-website/: .gitignore  package-lock.json  package.json
tiltedvoice/: README.md  TiltedVoice.spec  pyproject.toml
tiltedvoice/scripts/: build_exe.py  fix_audio.py
tiltedvoice/tests/: test_audio.py  test_models.py  test_transcriber.py
tiltedvoice/tiltedvoice/: __init__.py  audio.py  gui.py  models.py  transcriber.py
website/: .gitignore  BACKEND_DECISION.md  (+8 more)
(+347 files in other folders)
